--- a/pom.xml
+++ b/pom.xml
@@ -12,79 +12,101 @@
 		<!-- properties used for filtering and dependency management -->
 		<jvmtarget>1.8</jvmtarget>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<modules>
 		<module>ariba-core</module>
 		<module>ariba-expr</module>
-<!--		<module>ariba-metaui</module>
-		<module>ariba-metaui-jpa</module>
-	-->	<module>ariba-util</module>
+		<!-- <module>ariba-metaui</module> <module>ariba-metaui-jpa</module> -->
+		<module>ariba-util</module>
 		<module>ariba-widgets</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
-            <dependency>
-                <groupId>aribaweb</groupId>
-                <artifactId>ariba-core</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>aribaweb</groupId>
-                <artifactId>ariba-expr</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>aribaweb</groupId>
-                <artifactId>ariba-metaui</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>aribaweb</groupId>
-                <artifactId>ariba-metaui-jpa</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>aribaweb</groupId>
-                <artifactId>ariba-util</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>aribaweb</groupId>
-                <artifactId>ariba-widget</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-		<dependency>
-			<groupId>net.java.dev.javacc</groupId>
-			<artifactId>javacc</artifactId>
-			<version>6.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-		<dependency>
-			<groupId>oro</groupId>
-			<artifactId>oro</artifactId>
-			<version>2.0.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.bcel</groupId>
-			<artifactId>bcel</artifactId>
-			<version>6.0</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-		</dependency>
-<dependency>
-  <groupId>org.markdownj</groupId>
-  <artifactId>markdownj-core</artifactId>
-  <version>0.4</version>
-</dependency>
+			<dependency>
+				<groupId>aribaweb</groupId>
+				<artifactId>ariba-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>aribaweb</groupId>
+				<artifactId>ariba-expr</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>aribaweb</groupId>
+				<artifactId>ariba-metaui</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>aribaweb</groupId>
+				<artifactId>ariba-metaui-jpa</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>aribaweb</groupId>
+				<artifactId>ariba-util</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>aribaweb</groupId>
+				<artifactId>ariba-widget</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.java.dev.javacc</groupId>
+				<artifactId>javacc</artifactId>
+				<version>6.1.2</version>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>1.2.17</version>
+			</dependency>
+			<dependency>
+				<groupId>oro</groupId>
+				<artifactId>oro</artifactId>
+				<version>2.0.8</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.bcel</groupId>
+				<artifactId>bcel</artifactId>
+				<version>6.0</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.1.0</version>
+
+			</dependency>
+			<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>javax.mail-api</artifactId>
+				<version>1.5.6</version>
+			</dependency>
+			<dependency>
+				<groupId>asm</groupId>
+				<artifactId>asm</artifactId>
+				<version>3.3.1</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/net.sf.jtidy/jtidy -->
+			<dependency>
+				<groupId>net.sf.jtidy</groupId>
+				<artifactId>jtidy</artifactId>
+				<version>r938</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.xhtmlrenderer/flying-saucer-pdf -->
+			<dependency>
+				<groupId>org.xhtmlrenderer</groupId>
+				<artifactId>flying-saucer-pdf</artifactId>
+				<version>9.0.9</version>
+			</dependency>
+			<dependency>
+				<groupId>org.markdownj</groupId>
+				<artifactId>markdownj-core</artifactId>
+				<version>0.4</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
