Add ariba-groovyloader module.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	<modules>
 		<module>ariba-core</module>
 		<module>ariba-expr</module>
+		<module>ariba-groovyloader</module>
         <module>ariba-metaui</module> 
 		<!--<module>ariba-metaui-jpa</module> -->
 		<module>ariba-util</module>
@@ -33,6 +34,11 @@
 			<dependency>
 				<groupId>aribaweb</groupId>
 				<artifactId>ariba-expr</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>aribaweb</groupId>
+				<artifactId>ariba-groovyloader</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
