--- a/ariba-core/pom.xml
+++ b/ariba-core/pom.xml
@@ -20,6 +20,10 @@
 			<artifactId>ariba-expr</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>aribaweb</groupId>
+			<artifactId>ariba-groovyloader</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
