Add hibernate entity-manager dependency to make metaUI happy.

--- a/ariba-metaui-jpa/pom.xml
+++ b/ariba-metaui-jpa/pom.xml
@@ -28,5 +28,11 @@
 			<!-- a current version causes errors due to API changes -->
 			<version>3.6.10.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>3.6.10.Final</version>
+		</dependency>
 	</dependencies>
 </project>
