--- a/else/examples/Demo/pom.xml
+++ b/else/examples/Demo/pom.xml
@@ -35,11 +35,6 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<artifactId>ariba-metaui</artifactId>
-			<groupId>aribaweb</groupId>
-			<version>5.2.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
 			<version>9.4.0.M1</version>
@@ -53,6 +48,22 @@
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-highlighter</artifactId>
 			<version>5.2.1</version>
+		</dependency>
+		<dependency>
+			<artifactId>ariba-metaui</artifactId>
+			<groupId>aribaweb</groupId>
+			<version>5.2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>aribaweb</groupId>
+			<artifactId>ariba-metaui-jpa</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.2</version>
 		</dependency>
 	</dependencies>
 </project>
