Modify URL to keep with the original demo pattern.

--- a/else/examples/Demo/src/main/webapp/WEB-INF/web.xml
+++ b/else/examples/Demo/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,6 @@
 </servlet>
 <servlet-mapping>
 <servlet-name>Demo</servlet-name>
-<url-pattern>/AribaWeb/*</url-pattern>
+<url-pattern>/Demo/AribaWeb/*</url-pattern>
 </servlet-mapping>
 </web-app>
