Use original aribaweb.properties minus the depends-on value.

--- a/else/examples/Demo/src/main/resources/META-INF/aribaweb.properties
+++ b/else/examples/Demo/src/main/resources/META-INF/aribaweb.properties
@@ -1,3 +1,5 @@
-packaged-resource-extensions=awl
-initializer=ariba.ui.aribaweb.core.AWConcreteApplication.initializeForJarApplication
+packaged-resource-extensions=awl,oss,csv,xml
+namespace-identifier=x
+use-namespace-from-package=ariba.ui.meta
+app-name=Demo
 ariba.aribaweb.Debug=true
