--- a/else/examples/Demo/pom.xml
+++ b/else/examples/Demo/pom.xml
@@ -65,5 +65,15 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>aribaweb</groupId>
+			<artifactId>ariba-groovyloader</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>aribaweb</groupId>
+			<artifactId>ariba-util</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
