Enable servlet initialization on startup instead of first request.

--- a/else/examples/Demo/src/main/webapp/WEB-INF/web.xml
+++ b/else/examples/Demo/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 <servlet>
 <servlet-name>Demo</servlet-name>
 <servlet-class>ariba.ui.servletadaptor.AWDispatcherServlet</servlet-class>
-
+<load-on-startup>1</load-on-startup>
 </servlet>
 <servlet-mapping>
 <servlet-name>Demo</servlet-name>
